tests/test-build/tests/common/arch/expect-fail-all-arch.stderr
error: OK
 --> tests/common/arch/expect-fail-all-arch.rs:5:13
  |
5 |             compile_error!("OK");
  |             ^^^^^^^^^^^^^^^^^^^^
